kubernetes/vote/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
  namespace: vote-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
        - name: vote
          image: h0x3ein/rvote:2e16ed1
