kubernetes/vote/allow-ingress-to-vote.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-vote
  namespace: vote-app
spec:
  podSelector:
    matchLabels:
      app: vote
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
      podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
          app.kubernetes.io/component: controller
    ports:
    - protocol: TCP
      port: 5000
