kubernetes/vote/vote-egress-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vote-egress-redis
  namespace: vote-app
spec:
  podSelector:
    matchLabels:
      app: vote
  policyTypes:
  - Egress
  egress:
  - to:
      - podSelector:
          matchLabels:
            app: redis
    ports:
      - protocol: TCP
        port: 6379
